--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "sass": "^1.32.11",
+    "sass-loader": "^10.1.1"
+  }
 }
