--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "slugify": "^1.5.0",
-    "nuxt-webfontloader": "^1.1.0"
+    "nuxt-webfontloader": "^1.1.0",
+    "slugify": "^1.5.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
