--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "web",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
+  "version": "1.0.1",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
-    "slugify": "^1.5.0",
-    "nuxt-webfontloader": "^1.1.0"
+    "nuxt-webfontloader": "^1.1.0",
+    "slugify": "^1.5.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
     "nuxt": "^2.15.4",
     "sass": "^1.32.11",
     "sass-loader": "^10.1.1"
-  }
+  },
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt",
+    "generate": "nuxt generate",
+    "start": "nuxt start"
+  },
+  "private": true
 }
