--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "1.0.42",
   "dependencies": {
+    "@nuxtjs/i18n": "^7.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
