--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "debounce": "^1.2.1",
+    "js-cookie": "^3.0.0",
     "nuxt": "^2.15.3",
     "nuxt-webfontloader": "^1.1.0",
     "slugify": "^1.5.0",
