fix(ci): fix gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ npm:
   only:
     refs:
       - master
-    # changes:
-    #   - package.json
+    changes:
+      - package.json
   except:
     - tags
 
